style.css
* {
    margin: 0;
    padding: 0;
}

.add {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 30%;
  height: 70%;
  background-color: white;
  z-index: 9999;
  text-align: center;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh; 
  background-color: rgba(0, 0, 0, 0.3);
  z-index: 9998;
}

.closeadd {
    display: block;
    position: absolute;
    top: 15px;
    right: 15px;
    font-size: 30px;
    color: brown;
    margin-left: auto;
    background: rgb(233, 233, 233);
    border: 3px solid rgb(143, 143, 143);
    border-radius: 5px;
    padding: 5px;
}

.interior {
    margin: 10%;
    justify-content: center;
}

header {
    background-color: rgb(87, 168, 235);
    display: flex;
    justify-content: center;
}

nav {
    display: flex;
    justify-content: center;
    align-items: center;
}

nav a {
    text-decoration: none;
    color: inherit;
    display: flex;
    padding: 15px 20px;
    border-bottom: 5px solid transparent;
}

nav a:hover {
    border-bottom: 5px solid #42f57b; !important
}

.container {
    padding: 30px;
    display: flex;
    justify-content: space-between;
}

.botao {
    background-color: rgb(81, 230, 143);
    padding: 10px;
    border: 5px solid rgb(198, 231, 136);
    border-radius: 15px;
    font-size: 15px;
    font-weight: bold;
}

.addform {
  display: flex;
  flex-direction: column;
  gap: 8px;
  max-width: 300px;
  justify-content: center;
}

input {
  justify-content: center;
}

.addform div {
    display: flex;
    flex-direction: column;
    gap: 2px;
    width: 100%;
}

.addform div input, .addform div select {
    width: 100%;
}

.addform div label {
    font-weight: bold;
    margin-top: 10x;
}

.radiogram {
    display: flex !important;
    flex-direction: row !important;
    align-items: center;
}

